--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ html, body {
 	font-family: 'Dosis', sans-serif;
 	margin: 0px;
 }
+
 .wrap{
 	width:960px;
 	margin:0px auto;
@@ -27,7 +28,7 @@ a {
 }
 
 .logo {
-	font-weight: 800;
+	font-weight: 700;
 	font-size: 30px;
 	color: #333;
 	line-height: 1.8em;
@@ -133,7 +134,7 @@ nav ul.sright li a {
 }
 .button {
 	background: #ff3766;
-	border: 0;
+	border: solid 1px transparent;
 	color: white;
 	display: inline-block;
 	font-size: 1.5rem;
@@ -143,6 +144,11 @@ nav ul.sright li a {
 	border-radius: 5px;
 	text-shadow: none;
 	text-transform: uppercase;
+}
+.button:hover{
+	background: white;
+	border: solid 1px  #ff3766;
+	color:  #ff3766;
 }
 
 .sugerencias {
@@ -397,18 +403,18 @@ ul.evento li.seis ul.etiqueta li {
 	height: 80px;
 	border-radius: 50%;
 	border: solid 5px #a4a1a1;
-	color: #a4a1a1;
-	text-align: center;
 	line-height: 0em;
-	font-size: 50px;
-	font-weight: 700;
 	margin: 0px 11.5%;
 	float: left;
 }
 
 .icons p {
-	margin: 0px;
+	color: #a4a1a1;
+	font-size: 50px;
+	font-weight: 700;
 	line-height: 1.5em;
+	margin: 0px;
+	text-align: center;
 	padding: 0px;
 }
 
@@ -419,7 +425,7 @@ ul.evento li.seis ul.etiqueta li {
 	margin: 20px 18px;
 }
 
-.icon-text h2 {
+.icon-text h3 {
 	font-size: 20px;
 	color: #ff3766;
 	font-weight: 500;
@@ -466,7 +472,7 @@ ul.evento li.seis ul.etiqueta li {
 
 .crea p, .busca_banner p {
 	font-size: 24px;
-	margin-top: 20px 0px;
+	margin-top: 20 0;
 	font-family: 'PT Serif', serif;
 }
 
@@ -1320,7 +1326,7 @@ a.control_next {
     width: 150px;
     height: 150px;
     float: left;
-    margin: 40px,20px, 0px, 0px;
+
 }
 .main-info-user{
     float:left;
@@ -1598,19 +1604,26 @@ a la simulacion de user de Slay*/
 
 }
 
-.sregistro, .log-in {
-  float: left;
-  margin-left: 30px;
-  display: block;
-  color: #ff3766;
-  text-decoration: underline;
-  cursor: pointer;
-  border: none;
-  background: none;
-  font-size: 13px;
-
-
+.sregistro{
+    color: #ff3766;
+    cursor: pointer;
+    border: none;
+    background: none;
+    display: block;
+    float: none;
+    font-size: 13px;
+    text-decoration: underline;
+    position: absolute;
 }
+
+.sregistro:before{
+  content:url('../img/avatar_perfil_user.png'); /* with class ModalCarrot ??*/
+  padding-right: 10px;
+  position: absolute;
+  top: -14px;
+  left: -50px;
+}
+
 
 
 .pop, .pop-log {
@@ -1928,7 +1941,7 @@ div.tab-content{
 
 }
 
-#c6 {
+#c7 {
     height: 99px;
     width: 150px;
     text-align: center;
@@ -1936,7 +1949,7 @@ div.tab-content{
     margin: 30px 0px 0px 35px;
 }
 
-#c6 span {
+#c7 span {
     color: #ff3766
 }
 
@@ -1951,7 +1964,7 @@ div.tab-content{
 
 #c1 > .tab-content {
 	width: 420px;
-	height: 200px;
+	height: 255px;
 	padding: 70px 100px 105px 200px;
 	background: white;
 }
@@ -2082,20 +2095,53 @@ textarea {
 	padding: 20px 100px;
 }
 
-#c6 > .tab-content h2 {
+#c5 > .tab-content >.tab-button a {
+	margin: 0 90px;
+}
+
+
+#c6 h2 {
+	color: #ff3766;
+	text-align: center;
+}
+
+#c6 p {
+	text-align: center;
+	width: 500px;
+	font-size: 20px;
+	margin: 20px auto;
+}
+
+#c6 textarea {
+	height: 40px;
+	width: 500px;
+	margin: 30px 0px;
+	font-size: 25px;
+	line-height: 1.6em;
+	text-align: center;
+}
+
+#c6 > .tab-content {
+	padding: 20px 100px;
+}
+
+#c7 > .tab-content h2 {
 	color: #ff3766;
 	text-align: center;
 	margin: 100px 0px 30px 50px;
 }
+#c6 > .tab-content >.tab-button a {
+	margin: 30px 100px;
+}
 
-#c6 > .tab-content p {
+#c7 > .tab-content p {
 	text-align: center;
 	width: 420px;
 	font-size: 20px;
 	margin: 0px 0px 40px 50px;
 }
 
-#c6 > .tab-content {
+#c7 > .tab-content {
 	padding: 0px 100px 30px 100px;
 }
 
@@ -2117,7 +2163,7 @@ textarea {
 }
 
 /* form registro*/
-.registropg, .log-inpg,{
+.registropg, .log-inpg{
 
 margin: 0 auto;
   color: #ff3766;
@@ -2271,8 +2317,8 @@ margin: 0 auto;
 
 .registro-reserva p{
 	color: white;
-  font-size: 24px;
-  margin:25 auto;
+	font-size: 24px;
+	margin:25 auto;
 
 }
 
